added failsafe plugin to test-coverage profile